--- a/.gitignore
+++ b/.gitignore
@@ -5509,3 +5509,45 @@ node_modules/yocto-queue/index.js
 node_modules/yocto-queue/license
 node_modules/yocto-queue/package.json
 node_modules/yocto-queue/readme.md
+node_modules/.bin/acorn
+node_modules/.bin/acorn.cmd
+node_modules/.bin/acorn.ps1
+node_modules/.bin/eslint
+node_modules/.bin/eslint.cmd
+node_modules/.bin/eslint.ps1
+node_modules/.bin/esparse
+node_modules/.bin/esparse.cmd
+node_modules/.bin/esparse.ps1
+node_modules/.bin/esvalidate
+node_modules/.bin/esvalidate.cmd
+node_modules/.bin/esvalidate.ps1
+node_modules/.bin/is-ci
+node_modules/.bin/is-ci.cmd
+node_modules/.bin/is-ci.ps1
+node_modules/.bin/js-yaml
+node_modules/.bin/js-yaml.cmd
+node_modules/.bin/js-yaml.ps1
+node_modules/.bin/mime
+node_modules/.bin/mime.cmd
+node_modules/.bin/mime.ps1
+node_modules/.bin/node-which
+node_modules/.bin/node-which.cmd
+node_modules/.bin/node-which.ps1
+node_modules/.bin/nodemon
+node_modules/.bin/nodemon.cmd
+node_modules/.bin/nodemon.ps1
+node_modules/.bin/nodetouch
+node_modules/.bin/nodetouch.cmd
+node_modules/.bin/nodetouch.ps1
+node_modules/.bin/nopt
+node_modules/.bin/nopt.cmd
+node_modules/.bin/nopt.ps1
+node_modules/.bin/rc
+node_modules/.bin/rc.cmd
+node_modules/.bin/rc.ps1
+node_modules/.bin/rimraf
+node_modules/.bin/rimraf.cmd
+node_modules/.bin/rimraf.ps1
+node_modules/.bin/semver
+node_modules/.bin/semver.cmd
+node_modules/.bin/semver.ps1
